@@ -360,10 +360,5 @@ apt-install mdadm
 
 md_mainmenu
 
-# Dump everything out to /etc/mdadm.conf, whatever got configured
-echo "# Autogenerated by mdcfg. See mdadm.conf(5) for more details on this file." > /etc/mdadm.conf
-echo "DEVICE partitions" >> /etc/mdadm.conf
-mdadm --detail --scan >> /etc/mdadm.conf
-
 #db_stop
 exit 0
