@@ -1,12 +1,8 @@
 #!/bin/sh
-# Hack around bug #250427
-set -e
-FILE=/target/etc/mdadm/debian.conf
-if [ -e $FILE ]; then
-	sed 's/AUTOSTART=false/AUTOSTART=true/' < $FILE > $FILE.new
-	mv -f $FILE.new $FILE
-fi
-
-# Just to make sure.. (Hack around #231823)
+CF=/target/etc/mdadm/mdadm.conf
 mkdir -p /target/etc/mdadm
-cp /etc/mdadm.conf /target/etc/mdadm/mdadm.conf
+echo "# Autogenerated by mdcfg. See mdadm.conf(5) for more details on this file." > /etc/mdadm.conf
+echo "DEVICE partitions" >> $CF
+chroot /target mount /proc
+chroot /target mdadm --detail --scan >> $CF
+chroot /target umount /proc
